# CHARM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
charm/: __init__.py  all_models.py  calc_summary_stats_galaxy_Pk_Bk_mp.py  calc_summary_stats_galaxy_wavelets.py  calculate_save_summary_stats.py  calculate_save_summary_stats_halos.py  cnn_3d_stack.py  combined_models.py  create_random_configs.py  get_LH_points_HOD_params.py  infer_halos_from_PM.py  predict_save_halo_cats.py  run_conc_multgpu_ddp.py  run_inference.py  run_inference_hod.py  run_mass_multgpu_ddp.py  run_vel_multgpu_ddp.py  test_mp_wavelets.py  utils_data_prep_cosmo_vel.py  utils_data_prep_cosmo_vel_conc_peak.py  utils_data_prep_cosmo_vel_nu_zevol.py
notebooks/: example_get_mock_halos.ipynb  plot_Ntot_M1_Mdiff_vdiff.ipynb  save_halocats_test.ipynb  save_summary_stats.ipynb  test_2gpc_mass_vel_charm.ipynb  test_3gpc_mass_only.py  test_3gpc_mass_vel_charm.ipynb  test_HOD_pop.ipynb  test_inference.ipynb  test_inference_hod.ipynb  test_multgpu.ipynb  test_multgpu_mass_vel_charm.ipynb  test_multgpu_vel.ipynb  test_nbar_charm_cats.ipynb  test_summary_stats.ipynb
prep_data/: FIDUCIAL_process_halos_wvel_quijote.py  TEST_HMF_all_cosmo.ipynb  ngp_mass.c  ngp_mass.pyx  params_fastpm_test.lua  process_1Gpc_90snaps_run.ipynb  process_2Gpc_run.ipynb  process_3Gpc_run.ipynb  process_density_NGP_fastpm.py  process_halos_peakheight_conc_wvel_quijote.py  process_halos_wvel_quijote.py  process_velocity_NGP_fastpm.py  random_subsamp_halo_rho_vel.py  run_density_NGP_fastpm.sh  setup.py  (+10 more)
(+84 files in other folders)
