[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "charm"
version = "0.1.0"
description = "python code for obtaining N-body like halo catalog from particle mesh simulations"
author = "Shivam Pandey"
email = "shivampcosmo@gmail.com"

[options]
python_requires = ">=3.9"

[options.extras_require]
dev = ["pytest"]

[options.packages.find]
exclude = ["tests"]

[options.package_data]
CHARM = ["requirements.txt"]