[metadata]
name = charm
version = 0.1
description = python code for obtaining N-body like halo catalog from fast particle mesh simulations

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy<2.0.0
    scipy
    scikit-learn
    pandas
    astropy
    tqdm
    Pylians
    torch
    colossus
    sparse
    dill
    

[options.extras_require]
full = 
    smt
    Cython